Update tsconfig.json to include "dom" in the "lib" array Add code-editor.component.html Add live-preview.component.html Add playground.component.html Add playground.component.scss Add live-preview.component.ts Update index.html to include font and icon styles Add playground.component.ts Add playground.component.spec.ts Add code-editor.component.spec.ts Add live-preview.component.spec.ts Update angular.json to include monaco-editor assets and scripts Update app.module.ts to import necessary components and modules Update package.json to include dependencies for ace-builds and ngx-ace-wrapper Add code-editor.component.ts Update styles.scss to include custom theming for Angular Material

--- a/angular.json
+++ b/angular.json
@@ -27,12 +27,22 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              {
+                "glob": "**/*",
+                "input": "node_modules/monaco-editor/min",
+                "output": "/assets/monaco-editor/"
+              }
             ],
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": []
+"scripts": [
+  "node_modules/ace-builds/src-noconflict/ace.js",
+  "node_modules/ace-builds/src-noconflict/ext-language_tools.js"
+]
+
+
           },
           "configurations": {
             "production": {
@@ -100,5 +110,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "5ffaf8d1-08a5-4b0d-8de8-c721b437d185"
   }
 }
