Update app component and code editor component templates

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "^15.0.0",
     "@angular/compiler": "^15.0.0",
     "@angular/core": "^15.0.0",
+    "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "^15.0.0",
     "@angular/material": "^15.2.9",
     "@angular/platform-browser": "^15.0.0",
@@ -32,6 +33,7 @@
     "@angular/cli": "~15.0.3",
     "@angular/compiler-cli": "^15.0.0",
     "@types/jasmine": "~4.3.0",
+    "angular-cli-ghpages": "^2.0.1",
     "css-loader": "^7.1.2",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
